Added functional Stripe Webhook :: Connnector prototype. Added API module / controller / service for `/api` endpoint. Added 'SetBodyParser' middleware to handle requests to '/api/stripe/webhook' endpoint.   Stripe requires a raw Buffer object as the request body, whereas rest of app uses direct JSON. Added POST '/api/stripe/webhook' endpoint that verifies validity of webhook secret and parses incoming webhook event.   See $5 for full JSON output from Dashboard Subscription creation.

--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@nestjs/common": "^6.10.14",
     "@nestjs/core": "^6.10.14",
     "@nestjs/platform-express": "^6.10.14",
+    "dotenv": "^8.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "stripe": "^8.29.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.13.2",
