--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,27 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es2017",
-    "sourceMap": true,
-    "outDir": "./dist",
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
+    "declaration": true,
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
     "incremental": true,
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "outDir": "./dist",
     "paths": {
       "src/*": [
         "src/*"
       ]
-    }
+    },
+    "removeComments": true,
+    "sourceMap": true,
+    "target": "es2017"
   },
+  "include": [
+    "./src/**/*.ts"
+  ],
   "exclude": ["node_modules", "dist"]
 }
