--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "dev:db:mongo:ssh-tunnel": "ssh -L 4433:localhost:27017 root@167.172.199.242 -f -N",
+    "dev:db:redis": "docker-compose -f redis.docker-compose.yml up",
+    "dev:db:redis:detached": "docker-compose -f redis.docker-compose.yml up -d",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -21,9 +24,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^6.10.14",
+    "@nestjs/config": "^0.2.4",
     "@nestjs/core": "^6.10.14",
+    "@nestjs/mongoose": "^6.3.1",
     "@nestjs/platform-express": "^6.10.14",
-    "dotenv": "^8.2.0",
+    "intuit-oauth": "^2.0.2",
+    "mongoose": "^5.9.4",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
@@ -35,6 +42,7 @@
     "@nestjs/testing": "^6.10.14",
     "@types/express": "^4.17.2",
     "@types/jest": "25.1.2",
+    "@types/mongoose": "^5.7.4",
     "@types/node": "^13.1.6",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
