--- a/package.json
+++ b/package.json
@@ -26,15 +26,19 @@
     "@nestjs/common": "^6.10.14",
     "@nestjs/config": "^0.2.4",
     "@nestjs/core": "^6.10.14",
-    "@nestjs/mongoose": "^6.3.1",
     "@nestjs/platform-express": "^6.10.14",
+    "@nestjs/typeorm": "^6.3.3",
+    "axios": "^0.19.2",
     "intuit-oauth": "^2.0.2",
-    "mongoose": "^5.9.4",
+    "mongodb": "^3.5.4",
+    "nest-winston": "^1.3.1",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
-    "stripe": "^8.29.0"
+    "stripe": "^8.29.0",
+    "typeorm": "^0.2.24",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.13.2",
@@ -42,7 +46,6 @@
     "@nestjs/testing": "^6.10.14",
     "@types/express": "^4.17.2",
     "@types/jest": "25.1.2",
-    "@types/mongoose": "^5.7.4",
     "@types/node": "^13.1.6",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
