--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^6.3.3",
     "axios": "^0.19.2",
     "intuit-oauth": "^2.0.2",
+    "lodash": "^4.17.15",
     "mongodb": "^3.5.4",
     "nest-winston": "^1.3.1",
     "redis": "^3.0.2",
