--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^0.0.3",
     "@nestjs/common": "^6.10.14",
     "@nestjs/config": "^0.2.4",
     "@nestjs/core": "^6.10.14",
+    "@nestjs/microservices": "^6.11.11",
     "@nestjs/platform-express": "^6.10.14",
     "@nestjs/typeorm": "^6.3.3",
     "axios": "^0.19.2",
+    "bull": "^3.13.0",
     "intuit-oauth": "^2.0.2",
+    "ioredis": "^4.16.0",
     "lodash": "^4.17.15",
     "mongodb": "^3.5.4",
     "nest-winston": "^1.3.1",
@@ -39,12 +43,14 @@
     "rxjs": "^6.5.4",
     "stripe": "^8.29.0",
     "typeorm": "^0.2.24",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.13.2",
     "@nestjs/schematics": "^6.8.1",
     "@nestjs/testing": "^6.10.14",
+    "@types/bull": "^3.12.1",
     "@types/express": "^4.17.2",
     "@types/jest": "25.1.2",
     "@types/node": "^13.1.6",
