--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "rxjs": "^6.5.4",
     "stripe": "^8.29.0",
     "typeorm": "^0.2.24",
+    "uniqid": "^5.2.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
   },
