--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/typeorm": "^6.3.3",
     "axios": "^0.19.2",
     "bull": "^3.13.0",
+    "flat": "^5.0.0",
     "intuit-oauth": "^2.0.2",
     "ioredis": "^4.16.0",
     "lodash": "^4.17.15",
@@ -54,6 +55,7 @@
     "@nestjs/testing": "^6.10.14",
     "@types/bull": "^3.12.1",
     "@types/express": "^4.17.2",
+    "@types/flat": "^5.0.0",
     "@types/jest": "25.1.2",
     "@types/node": "^13.1.6",
     "@types/nodemailer": "^6.4.0",
