Added 'customer.updated' Stripe webhook event :: Quickbooks support, allowing Stripe Customer update to also update the  matching QBO Customer record.   Job searches for existing customer via Intuit API based on 'DisplayName' query with Stripe Customer 'id'.   Stripe Customer data takes precedence, so final update object is a merge of existing and updated data. Added optional parameter for invalid Intuit Authorization to determine if alert email should be sent. Added queue / job monitoring for development. Fixed issue causing repeatable jobs with unique 'jobId' to not be deleted properly on app initialization.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/typeorm": "^6.3.3",
     "axios": "^0.19.2",
     "bull": "^3.13.0",
+    "bull-board": "^0.7.0",
     "flat": "^5.0.0",
     "intuit-oauth": "^2.0.2",
     "ioredis": "^4.16.0",
