--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mongodb": "^3.5.4",
     "nest-winston": "^1.3.1",
     "nodemailer": "^6.4.5",
+    "query-string": "^6.11.1",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
