Removed unused TypeORM references in prep for production deployment.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "dev:db:mongo:ssh-tunnel": "ssh -L 4433:localhost:27017 root@167.172.199.242 -f -N",
-    "dev:db:redis": "docker-compose -f redis.docker-compose.yml up",
-    "dev:db:redis:detached": "docker-compose -f redis.docker-compose.yml up -d",
+    "dev:db:redis": "docker-compose -f docker/redis/docker-compose.yml up",
+    "dev:db:redis:detached": "docker-compose -f docker/redis/docker-compose.yml up -d",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -29,7 +29,6 @@
     "@nestjs/core": "^6.10.14",
     "@nestjs/microservices": "^6.11.11",
     "@nestjs/platform-express": "^6.10.14",
-    "@nestjs/typeorm": "^6.3.3",
     "axios": "^0.19.2",
     "bull": "^3.13.0",
     "bull-board": "^0.7.0",
@@ -46,7 +45,6 @@
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
     "stripe": "^8.29.0",
-    "typeorm": "^0.2.24",
     "uniqid": "^5.2.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
@@ -67,7 +65,7 @@
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.19.1",
-    "jest": "^24.9.0",
+    "jest": "^25.2.0",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2",
     "ts-jest": "25.2.0",
