--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "target": "es2017"
   },
   "include": [
-    "./src/**/*.ts"
+    "./src/**/*.ts",
+    "./test/**/*.ts"
   ],
   "exclude": ["node_modules", "dist"]
 }
