--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "dev:db:redis:detached": "docker-compose -f docker/redis/docker-compose.yml up -d",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -54,18 +54,23 @@
     "@nestjs/schematics": "^6.8.1",
     "@nestjs/testing": "^6.10.14",
     "@types/bull": "^3.12.1",
+    "@types/convict": "^4.2.1",
     "@types/express": "^4.17.2",
     "@types/flat": "^5.0.0",
     "@types/jest": "25.1.2",
+    "@types/json5": "^0.0.30",
     "@types/node": "^13.1.6",
     "@types/nodemailer": "^6.4.0",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
+    "convict": "^5.2.0",
+    "cross-env": "^7.0.2",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.19.1",
     "jest": "^25.2.0",
+    "json5": "^2.1.3",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2",
     "ts-jest": "25.2.0",
