--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
 image: node:alpine
 
 stages:
-  - setup
-  - build
-  - test
-  - deploy
+#  - setup
+#  - build
+#  - test
+#  - deploy
   - healthcheck
 
 ### Variables
@@ -33,8 +33,8 @@ variables:
 # Run simple health check on final URL
 .all_health_check: &all_health_check
   # Delay is unnecessary for this app
-#  when: delayed
-#  start_in: 10 seconds
+  #when: delayed
+  #start_in: 10 seconds
   script:
     - chmod +x ./.deploy/all/healthcheck.sh
     - . ./.deploy/all/healthcheck.sh
