Gitlab doesn't allow that. oh well

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
 image: node:alpine
 
 stages:
-#  - setup
-#  - build
-#  - test
-#  - deploy
+  - setup
+  - build
+  - test
+  - deploy
   - healthcheck
 
 ### Variables
