perf(Logging): Add AWS CloudWatch Logs integration
Should replace the need to manually check log files across env EC2 servers.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "stripe": "^8.29.0",
     "uniqid": "^5.2.0",
     "winston": "^3.2.1",
+    "winston-cloudwatch": "^2.3.2",
     "winston-daily-rotate-file": "^4.4.2"
   },
   "devDependencies": {
