--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Gabe Wyatt <gabe@solarixdigital.com>",
   "license": "MIT",
   "scripts": {
+    "commit": "git-cz",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "dev:db:mongo:ssh-tunnel": "ssh -L 4321:localhost:27017 ubuntu@audit.widget.wcasg.solarix.dev -f -N -i C:\\Users\\Gabe\\.ssh\\aws\\solarix__pem_dev.pem",
@@ -53,9 +54,14 @@
     "winston-daily-rotate-file": "^4.4.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@nestjs/cli": "^6.13.2",
     "@nestjs/schematics": "^6.8.1",
     "@nestjs/testing": "^6.10.14",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/gitlab": "^6.0.4",
+    "@semantic-release/npm": "^7.0.5",
     "@types/bull": "^3.12.1",
     "@types/convict": "^4.2.1",
     "@types/express": "^4.17.2",
@@ -67,11 +73,14 @@
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
+    "commitizen": "^4.1.2",
     "convict": "^5.2.0",
     "cross-env": "^7.0.2",
+    "cz-conventional-changelog": "^3.2.0",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.19.1",
+    "husky": "^4.2.5",
     "jest": "^25.2.0",
     "json5": "^2.1.3",
     "prettier": "^1.18.2",
@@ -95,5 +104,10 @@
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
