--- a/package.json
+++ b/package.json
@@ -97,6 +97,9 @@
       "json",
       "ts"
     ],
+    "moduleNameMapper": {
+      "^src(.*)$": "<rootDir>/$1"
+    },
     "rootDir": "src",
     "testRegex": ".spec.ts$",
     "transform": {
